--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "openai": "^5.8.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@types/node": "^24.0.7",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
