--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "scripts": {
+    "start": "ts-node index.ts"
   }
 }
