--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "lodash.shuffle": "^4.2.0",
     "openai": "^5.8.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/lodash.shuffle": "^4.2.9",
     "@types/node": "^24.0.7",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
