--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "axios": "^1.10.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/lodash.shuffle": "^4.2.9",
@@ -25,6 +26,6 @@
     "start": "ts-node index.ts",
     "dev": "nodemon --exec ts-node index.ts",
     "debug": "nodemon --exec \"node --inspect-brk -r ts-node/register index.ts\"",
-    "demo": "ts-node tests/demo.ts"
+    "test": "ts-node tests/sequence"
   }
 }
