prep for render hosting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
   },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["index.ts", "controllers", "schemas"],
+  "exclude": ["client", "node_modules"]
 }
