--- a/package.json
+++ b/package.json
@@ -4,26 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/lodash.shuffle": "^4.2.9",
+    "@types/node": "^24.0.7",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "lodash.shuffle": "^4.2.0",
+    "nodemon": "^3.1.10",
     "openai": "^5.8.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "zod": "^3.25.67"
   },
-  "devDependencies": {
-    "axios": "^1.10.0",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/lodash.shuffle": "^4.2.9",
-    "@types/node": "^24.0.7",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
-  },
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "NODE_ENV=production node dist/index.js",
+    "build": "tsc",
     "dev": "nodemon --exec ts-node index.ts",
     "debug": "nodemon --exec \"node --inspect-brk -r ts-node/register index.ts\"",
     "test": "ts-node tests/sequence"
